feat: serving html files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,4 +18,4 @@ repos:
     rev: v0.901
     hooks:
     -   id: mypy
-        additional_dependencies: [types-click==7.1.0, types-requests==0.1.9]
+        additional_dependencies: [types-click==7.1.0, types-requests==0.1.9, types-aiofiles==0.1.4]
